locks_analysis_log/2024-06-18-21-25-33/bcc_trace_locks.30.106190.Service.Fixed-0.log
/virtual/main.c:61:64: error: use of undeclared identifier 'BPF_F_USE_STACKID'; did you mean 'BPF_F_REUSE_STACKID'?
            data_ptr->stack_id = stack_traces.get_stackid(ctx, BPF_F_USE_STACKID);
                                                               ^~~~~~~~~~~~~~~~~
                                                               BPF_F_REUSE_STACKID
/virtual/include/bcc/bpf.h:6064:2: note: 'BPF_F_REUSE_STACKID' declared here
        BPF_F_REUSE_STACKID             = (1ULL << 10),
        ^
/virtual/main.c:112:64: error: use of undeclared identifier 'BPF_F_USE_STACKID'; did you mean 'BPF_F_REUSE_STACKID'?
            data_ptr->stack_id = stack_traces.get_stackid(ctx, BPF_F_USE_STACKID);
                                                               ^~~~~~~~~~~~~~~~~
                                                               BPF_F_REUSE_STACKID
/virtual/include/bcc/bpf.h:6064:2: note: 'BPF_F_REUSE_STACKID' declared here
        BPF_F_REUSE_STACKID             = (1ULL << 10),
        ^
/virtual/main.c:163:64: error: use of undeclared identifier 'BPF_F_USE_STACKID'; did you mean 'BPF_F_REUSE_STACKID'?
            data_ptr->stack_id = stack_traces.get_stackid(ctx, BPF_F_USE_STACKID);
                                                               ^~~~~~~~~~~~~~~~~
                                                               BPF_F_REUSE_STACKID
/virtual/include/bcc/bpf.h:6064:2: note: 'BPF_F_REUSE_STACKID' declared here
        BPF_F_REUSE_STACKID             = (1ULL << 10),
        ^
/virtual/main.c:214:64: error: use of undeclared identifier 'BPF_F_USE_STACKID'; did you mean 'BPF_F_REUSE_STACKID'?
            data_ptr->stack_id = stack_traces.get_stackid(ctx, BPF_F_USE_STACKID);
                                                               ^~~~~~~~~~~~~~~~~
                                                               BPF_F_REUSE_STACKID
/virtual/include/bcc/bpf.h:6064:2: note: 'BPF_F_REUSE_STACKID' declared here
        BPF_F_REUSE_STACKID             = (1ULL << 10),
        ^
/virtual/main.c:265:64: error: use of undeclared identifier 'BPF_F_USE_STACKID'; did you mean 'BPF_F_REUSE_STACKID'?
            data_ptr->stack_id = stack_traces.get_stackid(ctx, BPF_F_USE_STACKID);
                                                               ^~~~~~~~~~~~~~~~~
                                                               BPF_F_REUSE_STACKID
/virtual/include/bcc/bpf.h:6064:2: note: 'BPF_F_REUSE_STACKID' declared here
        BPF_F_REUSE_STACKID             = (1ULL << 10),
        ^
/virtual/main.c:316:64: error: use of undeclared identifier 'BPF_F_USE_STACKID'; did you mean 'BPF_F_REUSE_STACKID'?
            data_ptr->stack_id = stack_traces.get_stackid(ctx, BPF_F_USE_STACKID);
                                                               ^~~~~~~~~~~~~~~~~
                                                               BPF_F_REUSE_STACKID
/virtual/include/bcc/bpf.h:6064:2: note: 'BPF_F_REUSE_STACKID' declared here
        BPF_F_REUSE_STACKID             = (1ULL << 10),
        ^
6 errors generated.
Failed to compile BPF program: Failed to compile BPF module <text>
